<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">




                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <ImageView
                                xmlns:app="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/image"
                                android:src="@drawable/img2"
                                android:layout_width="54dp"
                                android:layout_height="54dp"
                                android:scaleType="centerCrop"
                                />


                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:orientation="vertical">

                                <com.devspark.robototextview.widget.RobotoTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="15sp"
                                    android:id="@+id/title"
                                    android:text="Classic Room"/>

                                <com.devspark.robototextview.widget.RobotoTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/child"
                                    android:id="@+id/chld"
                                    android:textSize="11.7sp"
                                    android:textColor="@color/sub_txt_gray"/>

                                <com.devspark.robototextview.widget.RobotoTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:visibility="gone"
                                    android:text="@string/breakfast"
                                    android:textSize="11.7sp"
                                    android:textColor="@color/sub_txt_gray"/>
                            </LinearLayout>

                            <com.devspark.robototextview.widget.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1 offer Applied"
                                android:visibility="gone"
                                android:textSize="11.7sp"
                                android:textColor="@color/green"/>
                        </LinearLayout>

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/green"
                            android:textSize="9.7sp"
                            android:visibility="gone"
                            android:layout_marginTop="5dp"
                            android:text="Free Cancelation, Sunrise Check-in Available"/>

                    </LinearLayout>




                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|bottom"
                    android:orientation="vertical">

                    <com.devspark.robototextview.widget.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/sub_txt_gray"
                        android:textSize="11.7sp"
                        android:visibility="gone"
                        android:text="@string/strike_line"/>


                    <com.devspark.robototextview.widget.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:id="@+id/price"
                        android:textColor="@color/black"
                        android:text="$149"/>

                    <com.devspark.robototextview.widget.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Per day"
                        android:textColor="@color/sub_txt_gray"
                        android:textSize="8.3sp"/>
                </LinearLayout>
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/view_line"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:text="Pay at Hotel"
                    android:textColor="#2ba7b7"
                    android:maxLength="40"
                    android:textSize="13.3sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:id="@+id/bookingtest"
                    android:padding="10dp">

                    <com.devspark.robototextview.widget.RobotoTextView
                        android:id="@+id/booking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/red1_rect"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="5dp"
                        android:text="Book"
                        android:textColor="@color/white"
                        android:textSize="11.7sp" />


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>